# fastapi-vulnerable-api

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: 2eef3d5b5813_create_users_table.py
tests/integration/: test_health.py
tests/unit/: test_password.py  test_user_schemas.py
