[project]
name = "project1-vulnerable-fastapi"
version = "0.1.0"
description = "Python FastAPI Vulnerable API"
authors = [
    {name = "Iashkov Roman"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.138.1,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx2 (>=2.5.0,<3.0.0)",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]